--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 
   --loading-cube-border-color: #fafafa;
   --loading-cube-fixed-size: 50px;
+  --loading-cube-fixed-sides-distance-divider: 1.86;
 }
 
 a {
