--- a/src/css/Cube.css
+++ b/src/css/Cube.css
@@ -1,8 +1,11 @@
 .scene {
-  /* filter: blur(0.2px); */
   width: var(--loading-cube-size);
   height: var(--loading-cube-size);
-  /* perspective: 300px; */
+}
+
+.cube * {
+  user-select: none;
+  pointer-events: none;
 }
 
 .cube {
@@ -11,39 +14,38 @@
   position: relative;
   transform-style: preserve-3d;
 
-  /* animation: inclined-cube-3-faces-pause-animation 2s ease infinite; */
   transform: rotateX(-25deg) rotateY(45deg);
 }
 
 .cube-face {
   position: absolute;
+  overflow: hidden;
 
   aspect-ratio: 1/1;
   width: var(--loading-cube-size);
   height: var(--loading-cube-size);
 
-  color: transparent;
   background-color: var(--loading-cube-inside-color);
 }
 
 .cube-face-front {
-  transform: rotateY(0deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
-}
-
-.cube-face-right {
-  transform: rotateY(90deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
-}
-
-.cube-face-back {
-  transform: rotateY(180deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
-}
-
-.cube-face-left {
   transform: rotateY(-90deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
 }
 
+.cube-face-right {
+  transform: rotateY(180deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
+}
+
+.cube-face-back {
+  transform: rotateY(90deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
+}
+
+.cube-face-left {
+  transform: rotateY(0deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
+}
+
 .cube-face-top {
-  transform: rotateX(90deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
+  transform: rotateX(90deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size))) rotate(90deg);
 }
 
 .cube-face-bottom {
@@ -55,34 +57,42 @@
 
   width: 100%;
 
-  color: transparent;
-  background-color: transparent;
-
   object-fit: cover;
+  mix-blend-mode: color-burn;
   image-rendering: pixelated;
-  background-position: 0% 0%;
-  background-repeat: no-repeat;
 }
 
-.cube-face :is(.image-above-overlay, .image-under-overlay) {
-  position: absolute;
+.face-wrapper {
+  position: relative;
+}
 
-  height: 100%;
+.face-layer-above {
+  position: absolute;
+  left: 100%;
+  z-index: 3;
+
   width: 100%;
 
-  opacity: 0.5;
-
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  opacity: 0.85;
 }
 
-.image-above {
-  z-index: 5;
+.face-layer-middle {
+  position: absolute;
+  z-index: 2;
 
-  color: green;
-  background-color: green;
+  width: 100%;
+}
+
+.face-layer-under {
+  position: absolute;
+  z-index: 1;
+
+  width: 100%;
+}
+
+.texture-image {
+  opacity: 0.5;
+  filter: contrast(1.3) brightness(1.16);
 }
 
 .cube-face .image-above {
@@ -96,3 +106,32 @@
 .cube-face .image-under {
   z-index: 2;
 }
+
+/* Custom block css */
+
+/* Command block start */
+
+.command-block .cube-face-left {
+  rotate: -90deg;
+}
+
+.command-block .cube-face-top {
+  transform: rotateX(90deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size))) rotate(-90deg);
+}
+
+.command-block .cube-face-right {
+  rotate: -90deg;
+}
+
+.command-block .cube-face-bottom {
+  transform: rotateX(-90deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size))) rotate(-90deg);
+}
+
+.cube {
+  transition: 2s;
+
+  transform: rotateX(45deg) rotateY(405deg);
+  transform: rotateX(-45deg) rotateY(225deg);
+}
+
+/* Command block end */
