--- a/src/css/Variables.css
+++ b/src/css/Variables.css
@@ -3,11 +3,14 @@
   --loading-cube-inside-color: transparent;
   --loading-cube-size: 8px;
   --loading-cube-border-size: 0px;
+  --loading-cube-face-translate-z: 3.99px;
 
-  --loading-cube-animation-name: inclined-cube-3-faces-pause-animation;
+  /* calc(var(--loading-cube-size)/2); */
+
+  --loading-cube-animation-name: cube-jump-animation;
   /* --loading-cube-animation-name: diagonal-cube-walk-animation; */
   --loading-cube-animation-duration: 2s;
-  --loading-cube-animation-timing-function: ease;
+  --loading-cube-animation-timing-function: ease-in-out;
   --loading-cube-animation-iteration-count: infinite;
 
   /* animation: <name><duration><timing-function><iteration-count>; */
