--- a/src/css/Cube.css
+++ b/src/css/Cube.css
@@ -2,8 +2,8 @@
   width: var(--loading-cube-size);
   height: var(--loading-cube-size);
 
-  scale: 10;
-  white-space-collapse: collapse;
+  scale: 2;
+  filter: blur(0.025vh);
 }
 
 .cube * {
@@ -24,8 +24,8 @@
   position: absolute;
   overflow: hidden;
 
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+  /* -webkit-backface-visibility: hidden;
+  backface-visibility: hidden; */
 
   aspect-ratio: 1/1;
   width: var(--loading-cube-size);
@@ -33,27 +33,27 @@
 }
 
 .cube-face-front {
-  transform: rotateY(-90deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
+  transform: rotateY(-90deg) translateZ(calc((var(--loading-cube-size)/2.0) + var(--loading-cube-border-size)));
 }
 
 .cube-face-right {
-  transform: rotateY(180deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
+  transform: rotateY(180deg) translateZ(calc((var(--loading-cube-size)/2.0) + var(--loading-cube-border-size)));
 }
 
 .cube-face-back {
-  transform: rotateY(90deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
+  transform: rotateY(90deg) translateZ(calc((var(--loading-cube-size)/2.0) + var(--loading-cube-border-size)));
 }
 
 .cube-face-left {
-  transform: rotateY(0deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
+  transform: rotateY(0deg) translateZ(calc((var(--loading-cube-size)/2.0) + var(--loading-cube-border-size)));
 }
 
 .cube-face-top {
-  transform: rotateX(90deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size))) rotate(90deg);
+  transform: rotateX(90deg) translateZ(calc((var(--loading-cube-size)/2.0) + var(--loading-cube-border-size))) rotate(90deg);
 }
 
 .cube-face-bottom {
-  transform: rotateX(-90deg) translateZ(calc((var(--loading-cube-size)/2) + var(--loading-cube-border-size)));
+  transform: rotateX(-90deg) translateZ(calc((var(--loading-cube-size)/2.0) + var(--loading-cube-border-size)));
 }
 
 .cube-face img {
@@ -72,7 +72,7 @@
 
 .face-layer-above {
   position: absolute;
-  left: 100%;
+  /* left: -100%; */
   z-index: 3;
 
   width: 100%;
@@ -92,11 +92,6 @@
   z-index: 1;
 
   width: 100%;
-}
-
-.texture-image {
-  opacity: 0.5;
-  filter: contrast(1.3) brightness(1.16);
 }
 
 .cube-face .image-above {
