--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -77,5 +81,3 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-
-@keyframes spin-cube {}
